syntax = "proto3";

package frogchain.investibc;

import "gogoproto/gogo.proto";
import "frogchain/investibc/params.proto";
import "frogchain/investibc/deposit_balance.proto";

option go_package = "frogchain/x/investibc/types";

// GenesisState defines the investibc module's genesis state.
message GenesisState {
           Params         params             = 1 [(gogoproto.nullable) = false];
           string         port_id            = 2;
  repeated DepositBalance depositBalanceList = 3 [(gogoproto.nullable) = false];
}

